# CatValley

./: .gitignore  CMakeLists.txt  README.md
blender/: test1.blend  test1.mtl
include/glad/: glad.h
src/: glad.c  main.cpp
src/assets/vegetation/flowers/: daisy.glb  grass_with_yellow_flower.glb  green_grass.glb
src/assets/vegetation/trees/: green_tree.glb
src/include/: ani.hpp  camera.hpp  car.hpp  collision.hpp  model.hpp  shader.hpp  skybox.hpp
src/include/terrain/: frustumCulling.hpp  heightmap.hpp  terrain.hpp  terrainChunk.hpp  terrainSystem.hpp
src/include/vegetation/: vegetation.hpp  vegetationManager.hpp
src/include/water/: waterMesh.hpp
src/shaders/: ani.vs  fragment.glsl  model.fs  model.vs  shadow_depth.fs  terrain.fs  terrain.vs  tree.fs  tree.vs  vertex.glsl  water.fs  water.vs
